slight changes to project information

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,4 +45,29 @@
     max-height: 200px;
     padding-left: 80px;
     padding-top: 40px;
-  }
+    padding-right: 0px;
+  
+
+/*
+    ● User experience design
+    ● Git & GitHub
+    ● CSS
+    ● HTML
+    ● JavaScript
+    ● Bootstrap
+    ● The DOM
+    ● APIs
+    ● JQuery
+    ● JSON
+    ● AJAX
+    ● Team collaboration
+    ● Agile development
+    ● Node.js
+    ● ES6
+    ● Object-oriented programming
+    ● Test-driven development
+    ● React
+    ● Behaviour-driven development
+    ● Deployment
+    ● Agile development
+    */
