--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@
   .card-img-special {
     object-fit: cover;
     aspect-ratio: 16/9;
-    max-width: 400px !important;
+    width: 100% !important;
     max-height: 400px !important;
 /*made class to size and place image*/
   }
@@ -57,3 +57,6 @@
     padding-right: 0px;
   }
 
+.fs-3 {
+  font-size: 12px !important;
+}
