--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,13 @@
     padding-top: 40px;
     padding-right: 0px;
   }
-
+  .img-skills {
+    max-width: 400%;
+    max-height:fit-content;
+    padding-left: 0%;
+    padding-top: 10%;
+    padding-right: 0%;
+}
 .fs-3 {
   font-size: 20px !important;
 }
